--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
         <link rel='stylesheet' type='text/css' href='css/style.css'>
     </head>
     <body>
-
-
+        <div class='wrapper'>
+            <button id='return'>Return</button>
+            <div class="carousel">
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1200);' id='cell1'><div class='container'>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1201);' id='cell2'><div class='container'>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1202);' id='cell3'><div class='container'>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1200);' id='cell4'><div class='container'>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1202/1200);' id='cell5'><div class='container'>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div></div>
+            </div>
+            <div class="progress-bar"></div>
+          </div>
 
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <script src="https://unpkg.com/flickity-hash@1/hash.js"></script>
         <script src='js/script.js'></script>
     </body>
 </html>
