--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
     <head>
         <meta charset='UTF-8'>
+        <title>Plugin usage</title>
         <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <link rel='stylesheet' type='text/css' href='css/style.css'>
