--- a/index.html
+++ b/index.html
@@ -11,27 +11,55 @@
         <div class='wrapper'>
             <button id='return'>Return</button>
             <div class="carousel">
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1200);' id='cell1'><div class='container'>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1201);' id='cell2'><div class='container'>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1202);' id='cell3'><div class='container'>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1200);' id='cell4'><div class='container'>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1202/1200);' id='cell5'><div class='container'>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1200);' id='cell1'></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1201);' id='cell2'></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1202);' id='cell3'></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1200);' id='cell4'></div>
+                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1202/1200);' id='cell5'></div>
             </div>
             <div class="progress-bar"></div>
           </div>
 
+        <script>
+            var carArray = [
+            {
+                    image: "http://placekitten.com/1200/1200",
+                    title: "Lorem ipsum dolor sit amet.",
+                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
+                },
+                {
+                    image: "http://placekitten.com/1200/1200",
+                    title: "Lorem ipsum dolor sit amet.",
+                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
+                },
+                {
+                    image: "http://placekitten.com/1200/1200",
+                    title: "Lorem ipsum dolor sit amet.",
+                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
+                },
+                {
+                    image: "http://placekitten.com/1200/1200",
+                    title: "Lorem ipsum dolor sit amet.",
+                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
+                },
+                {
+                    image: "http://placekitten.com/1200/1200",
+                    title: "Lorem ipsum dolor sit amet.",
+                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
+                }
+            ]
+        </script>
+
+        <script id='template-car-cell' type='x-tmpl-mustache'>
+            <div class='container'>
+                <h3>{{ title }}</h3>
+                {{{description}}}
+            </div>
+        </script>
+
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
         <script src="https://unpkg.com/flickity-hash@1/hash.js"></script>
+        <script src='vendor/Mustache.js'></script>
         <script src='js/script.js'></script>
     </body>
 </html>
