Finish task-maps

--- a/index.html
+++ b/index.html
@@ -1,65 +1,79 @@
 <!DOCTYPE html>
 <html lang='en'>
-    <head>
-        <meta charset='UTF-8'>
-        <title>Plugin usage</title>
-        <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
-        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <link rel='stylesheet' type='text/css' href='css/style.css'>
-    </head>
-    <body>
-        <div class='wrapper'>
-            <button id='return'>Return</button>
-            <div class="carousel">
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1200);' id='cell1'></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1201);' id='cell2'></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1202);' id='cell3'></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1200);' id='cell4'></div>
-                <div class="carousel-cell" style='background-image: url(http://placekitten.com/1202/1200);' id='cell5'></div>
-            </div>
-            <div class="progress-bar"></div>
-          </div>
 
-        <script>
-            var carArray = [
+<head>
+    <meta charset='UTF-8'>
+    <title>Plugin usage</title>
+    <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel='stylesheet' type='text/css' href='css/style.css'>
+</head>
+
+<body>
+    <div class='wrapper'>
+        <button id='return'>Return</button>
+        <div class="carousel">
+            <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1200);' id='cell1'></div>
+            <div class="carousel-cell" style='background-image: url(http://placekitten.com/1200/1201);' id='cell2'></div>
+            <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1202);' id='cell3'></div>
+            <div class="carousel-cell" style='background-image: url(http://placekitten.com/1201/1200);' id='cell4'></div>
+            <div class="carousel-cell" style='background-image: url(http://placekitten.com/1202/1200);' id='cell5'></div>
+        </div>
+        <div class="progress-bar"></div>
+    </div>
+
+    <div id="map"></div>
+
+
+    <script>
+        var carArray = [
             {
-                    image: "http://placekitten.com/1200/1200",
-                    title: "Lorem ipsum dolor sit amet.",
-                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
-                },
-                {
-                    image: "http://placekitten.com/1200/1200",
-                    title: "Lorem ipsum dolor sit amet.",
-                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
-                },
-                {
-                    image: "http://placekitten.com/1200/1200",
-                    title: "Lorem ipsum dolor sit amet.",
-                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
-                },
-                {
-                    image: "http://placekitten.com/1200/1200",
-                    title: "Lorem ipsum dolor sit amet.",
-                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
-                },
-                {
-                    image: "http://placekitten.com/1200/1200",
-                    title: "Lorem ipsum dolor sit amet.",
-                    description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>"
-                }
-            ]
-        </script>
+                image: "http://placekitten.com/1200/1200",
+                title: "Lorem ipsum dolor sit amet.",
+                description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>",
+                coords: {lat: -25.363, lng: 131.044}
+            },
+            {
+                image: "http://placekitten.com/1200/1200",
+                title: "Lorem ipsum dolor sit amet.",
+                description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>",
+                coords: {lat: -28.363, lng: 134.044}
+            },
+            {
+                image: "http://placekitten.com/1200/1200",
+                title: "Lorem ipsum dolor sit amet.",
+                description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>",
+                coords: {lat: -25.363, lng: 137.044}
+            },
+            {
+                image: "http://placekitten.com/1200/1200",
+                title: "Lorem ipsum dolor sit amet.",
+                description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>",
+                coords: {lat: -22.363, lng: 140.044}
+            },
+            {
+                image: "http://placekitten.com/1200/1200",
+                title: "Lorem ipsum dolor sit amet.",
+                description: "<p>Lorem ipsum.</p> <img src=\"http://via.placeholder.com/400x200\" alt=\"Photo placeholder\"> <p>Dolor sit.</p>",
+                coords: {lat: -25.363, lng: 143.044}
+            }
+        ]
+    </script>
 
-        <script id='template-car-cell' type='x-tmpl-mustache'>
+    <script id='template-car-cell' type='x-tmpl-mustache'>
             <div class='container'>
                 <h3>{{ title }}</h3>
                 {{{description}}}
             </div>
         </script>
 
-        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-        <script src="https://unpkg.com/flickity-hash@1/hash.js"></script>
-        <script src='vendor/Mustache.js'></script>
-        <script src='js/script.js'></script>
-    </body>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script src="https://unpkg.com/flickity-hash@1/hash.js"></script>
+    <script src='vendor/Mustache.js'></script>
+    <script src='js/script.js'></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt4iaZBWY4Xhx9NpgBsP5YUwzs1bFAfMo&callback=initMap">
+    </script>
+
+</body>
+
 </html>
